test/Fail/Issue1125.err
Issue1125.agda:6.4: error: [ParseError]
A-}<ERROR>  = A-

-- Should give a parse ...
